feat(funcionario): enhance domain and persistence for contracts and remunerations
- Added sync methods for `DefPagamentos` and `DefinicaoRemuneracoes` in `Funcionario` domain to manage contracts, subsidies, and deductions updates.
- Introduced `OrdemServico` domain model with creation and rebuilding methods.
- Implemented `ValidarRegistoColaboradorCommandHandler` to facilitate employee data validation, including contract updates and relationship handling.
- Adjusted persistence entities (`FuncionarioEntity` and `ContratoEntity`) for alignment with the new domain logic.
- Updated JSON DTOs to reflect the changes to support validation and data synchronization.